--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
   port: 9090
 
-person:
-  age: 18
-  boss: false
-  birth: 2019/12/12
-  maps: {k1: v1,k2: 12}
-  lists:
-    - vivian
-  dog:
-    name: beibei
-    age: 2
-  last-name: dennis
+##person:
+##  age: 18
+##  boss: false
+##  birth: 2019/12/12
+##  maps: {k1: v1,k2: 12}
+##  lists:
+##    - vivian
+##  dog:
+##    name: beibei
+##    age: 2
+##  last-name: dennis
 
