--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,18 @@
 server:
   port: 9090
+spring:
+  datasource:
+    url: jdbc:mysql://192.168.0.130:3306/spring_boot
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 123456
+#    initialization-mode: always
+logging.level:
+  com.zd: debug
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+  mapper-locations: classpath:mybatis.mapper/*.xml
 ---
 server:
   port: 9091
