--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123456
+  jpa:
+    hibernate:
+      ddl-auto: update  #更新/创建数据表
+    show-sql: true  #控制台打印sql
 #    initialization-mode: always
 logging.level:
   com.zd: debug
