--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     hibernate:
       ddl-auto: update  #更新/创建数据表
     show-sql: true  #控制台打印sql
+  redis:
+    host: 192.168.0.130
 #    initialization-mode: always
 logging.level:
   com.zd: debug
