--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9090
 spring:
   profiles:
-    active: dev
+    active: prod
 ---
 server:
   port: 9091
@@ -46,6 +46,18 @@ spring:
     show-sql: true  #控制台打印sql
   redis:
     host: 192.168.0.130
+  rabbitmq:
+    host: 192.168.0.130
+    username: guest
+    password: guest
+  mail:
+    username: 1785319835@qq.com
+    password: vxpdbhmottbmcaci
+    host: smtp.qq.com
+    properties:
+      mail:
+        smtp:
+          starttls.enable: true
 #    initialization-mode: always
 logging.level:
   com.zd: debug
